# range_only_CL

./: .gitignore  CMakeLists.txt  README.md  dataprotocol.md  main.cpp  tech-report.md
apps/include/: Viewer.h
apps/src/: main.cpp  post_process_app_main.cpp  realtime_app_main.cpp  sync_app_main.cpp
datasets/: res.txt  test.txt
datasets/20190418/: 1.csv  4.csv  Data1.txt
io/: CMakeLists.txt
io/include/: DataProtocol.h
io/src/: DataProtocol.cpp
io/test/: DataProtocol_test.cpp  test_main.cpp
matlab/Matlab-CL/: ImuModel.m  Kinematics.m  MDS.m  MDS_Adam.m  Quaternion.m  State.m  UWBRangeSim.m  WheelEncoder.m  data190313.mat  disttest.m  fivepoint.m  fivepoint_test.m  heading_est.m  initializer.m  main.m  main.m~  trajectoryGen.m
matlab/Matlab-CL/unitTests/: testQuaternion.m
matlab/Matlab-CL/utils/: Omega.m  euler2quat.m  ishomog.m  isvec.m  q2ZXYeuler.m  q2tr.m  quaternionmul.m  r2t.m  rotx.m  roty.m  rotz.m  skew.m  t2r.m  tb_optparse.m  trplot.m  unit.m
matlab/Matlab-VerifyData/: hexdumpUWB.m  importSLAMData.m  main.m  main2.m  quart2rpy.m
matlab/Matlab-VerifyRes/: importRCLRes.m  importSLAMfile.m  main.m
sensor_fusion/: CMakeLists.txt
sensor_fusion/include/: AncLocalization.h  CLSystem.h  EnergyDetector.h  Estimator.h  FakeHeadingSensor.h  Initializer.h  Measurement.h  PositionInitializer.h  Robot.h  States.h  ThreadSafeQueue.h
sensor_fusion/src/: AncLocalization.cpp  CLSystem.cpp  Estimator.cpp  FakeHeadingSensor.cpp  Initializer.cpp  PositionInitializer.cpp  Robot.cpp  States.cpp
sensor_fusion/test/: AncLocalization_test.cpp  EnergyDetector_test.cpp  FakeHeadingSensor_test.cpp  States_test.cpp  test_main.cpp
